Revert "rydde (#1453)" (#1455)
This reverts commit a22dea15ebf40b987c76526bbc2e88a39906b056.